--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,6 +1,6 @@
 Package: orderlabel
 Title: Order Your Tables and Add Percent Labels
-Version: 0.0.5.2000
+Version: 0.0.5.3000
 Authors@R: person("Nick", "Moffitt", email = "nicksmoffitt@gmail.com", role = c("aut", "cre"))
 Description: Order Your Tables and Add Percent Labels
 Depends: R (>= 3.5.2)
@@ -12,5 +12,6 @@ Imports:
 	forcats,
 	tidyr,
 	readxl,
-	stringr
+	stringr,
+        purr
 RoxygenNote: 6.1.1
