Mostly small changes with package:: calls, .data$ references, and increased documentation. Black/white added to add_colors. Many new tests added to testthat

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -10,4 +10,5 @@ export(read_excel_allsheets)
 export(taking_names)
 export(topline)
 importFrom(dplyr,"%>%")
+importFrom(rlang,":=")
 importFrom(rlang,.data)
