--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,7 +1,7 @@
 Type: Package
 Package: orderlabel
 Title: Order Your Tables and Add Percent Labels
-Version: 0.1.5
+Version: 0.1.6
 Authors@R: person("Nick", "Moffitt", email = "nicksmoffitt@gmail.com", role = c("aut", "cre"))
 Description: Order your frequency tables and add percent labels for charting. 
 License: GPL-3
@@ -18,8 +18,9 @@ Imports:
   stringr,
   testthat,
   tibble,
+  tidyselect,
   tidyr,
   y2clerk
 Encoding: UTF-8
 LazyData: true
-RoxygenNote: 7.1.0
+RoxygenNote: 7.1.1
