--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,25 +1,26 @@
 Type: Package
 Package: orderlabel
 Title: Order Your Tables and Add Percent Labels
-Version: 0.2.1
+Version: 0.2.2
 Authors@R: person("Nick", "Moffitt", email = "nicksmoffitt@gmail.com", role = c("aut", "cre"))
 Description: Order your frequency tables and add percent labels for charting. 
 License: GPL-3
 URL: https://github.com/nick-moffitt/orderlabel
 BugReports: https://github.com/nick-moffitt/orderlabel/issues
 Imports:
-  dplyr,
-  forcats,
-  labelled,
-  purrr,
-  readxl,
-  rlang,
-  stringr,
-  testthat,
-  tibble,
-  tidyselect,
-  tidyr,
-  y2clerk
+    dplyr,
+    forcats,
+    labelled,
+    magrittr,
+    purrr,
+    readxl,
+    rlang,
+    stringr,
+    testthat,
+    tibble,
+    tidyselect,
+    tidyr,
+    y2clerk
 Encoding: UTF-8
 LazyData: true
 RoxygenNote: 7.1.1
