--- a/NAMESPACE
+++ b/NAMESPACE
@@ -5,11 +5,11 @@ export(add_ages)
 export(add_regions)
 export(order_label)
 export(order_same)
+export(order_topline)
 export(other_rm)
 export(preamble_rm)
 export(read_excel_allsheets)
 export(taking_names)
-export(topline)
 importFrom(magrittr,"%>%")
 importFrom(rlang,":=")
 importFrom(rlang,.data)
