--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,8 +1,10 @@
 Type: Package
 Package: orderlabel
 Title: Order Your Tables and Add Percent Labels
-Version: 0.3.3
-Authors@R: person("Nick", "Moffitt", email = "nicksmoffitt@gmail.com", role = c("aut", "cre"))
+Version: 0.3.4
+Authors@R: c(
+    person("Nick", "Moffitt", email = "nicksmoffitt@gmail.com", role = c("aut", "cre")),
+    person('Y2 Analytics', role = c('cph', 'fnd')))
 Description: Order your frequency tables and add percent labels for charting. 
 License: GPL-3
 URL: https://github.com/nick-moffitt/orderlabel
@@ -10,17 +12,18 @@ BugReports: https://github.com/nick-moffitt/orderlabel/issues
 Imports:
     dplyr,
     forcats,
-    labelled,
+    lubridate,
     magrittr,
     purrr,
     readxl,
     rlang,
     stringr,
-    testthat,
     tibble,
     tidyselect,
-    tidyr,
-    y2clerk
+    tidyr
+Suggests:
+    labelled,
+    testthat (>= 3.0.0)
 Encoding: UTF-8
 LazyData: true
-RoxygenNote: 7.1.2
+RoxygenNote: 7.2.3
