--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,10 +1,12 @@
 Type: Package
 Package: orderlabel
 Title: Order Your Tables and Add Percent Labels
-Version: 0.3.4
+Version: 0.4.0
 Authors@R: c(
     person("Nick", "Moffitt", email = "nicksmoffitt@gmail.com", role = c("aut", "cre")),
-    person('Y2 Analytics', role = c('cph', 'fnd')))
+    person('Danny', 'Cowser', email = 'danny@y2analytics.com', role = 'ctb'),
+    person('Y2 Analytics', role = c('cph', 'fnd'))
+    )
 Description: Order your frequency tables and add percent labels for charting. 
 License: GPL-3
 URL: https://github.com/nick-moffitt/orderlabel
